# ZIA

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  LICENSE-RESEARCH.md  LICENSING.md  PATENTS.md  README.md  THIRD_PARTY_NOTICES.md
bindings/: zia_python.cpp
include/: ZIAValue.h
notebooks/: zia-cfd_1.0.ipynb  zia-ml_1.4.ipynb  zia-qm-Pipeline_v7.2.ipynb  zia.py
src/: ZIAValue.cpp
tests/: test_ziavalue.cpp
